fix z-index open menu for overlaping phone-button; fix height scroll open menu

--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -1,7 +1,7 @@
 .header {
 	position: absolute;
 	width: 100%;
-	z-index: 100;
+	z-index: 1000;
 	@include adaptiveValue("padding-block", 30, 10);
 	@include adaptiveValue("height", 172, 120);
 	transition:
@@ -268,7 +268,7 @@
 	box-shadow: 0 3px 20px rgba(0, 0, 0, 0.067);
 	will-change: transform;
 	animation: scroll-down 0.7s 0.7s ease forwards;
-	z-index: 150;
+	z-index: 1000;
 
 	@keyframes scroll-down {
 		to {
@@ -281,7 +281,7 @@
 	}
 
 	.menu-open & {
-		height: 100vh;
+		height: 100dvh;
 	}
 
 	&:has(.page-navigation__body) {
